[gd_scene load_steps=2 format=3 uid="uid://bv88j0owojl6j"]

[ext_resource type="Script" uid="uid://d4gju1i54wlpr" path="res://scenes/main.gd" id="1_o5qli"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 320.0
offset_top = 319.0
offset_right = 961.0
offset_bottom = 415.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.52
text = "localhost"
placeholder_text = "hostname"

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "9999"
placeholder_text = "port"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Start Server"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Start Client"

[node name="Label" type="Label" parent="."]
offset_left = 320.0
offset_top = 134.0
offset_right = 491.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 80
text = "JaRV"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button2" to="." method="_on_join_pressed"]
